# days-of-the-year

./: README.md  __init__.py  core.py  pyproject.toml  requirements.txt  search.py  setup.cfg  utils.py
data/: days_of_the_year.json  readme.md
