[metadata]
name = days-of-the-year
version = 0.2.0
author = Data Druid 42
author_email = your.email@example.com
description = Searchable dataset of days, holidays, observances, and birthdays worldwide — with fuzzy search, filtering, and flat export options.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/datadruid42/days-of-the-year
license = MIT
license_files = LICENSE
keywords = holidays, observances, calendar, fuzzy search, dataset
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    rapidfuzz>=3.9.0

[options.extras_require]
dev =
    pytest>=8.0.0
    black>=24.0.0
    ruff>=0.5.0

[options.package_data]
days_of_the_year = data/*.json

[tool:pytest]
addopts = -v --tb=short
testpaths = tests

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist

[black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[ruff]
line-length = 100
select = ["E", "F", "W"]
ignore = ["E501"]

[bdist_wheel]
universal = 0
